# KeyMesh

./: README.md  config.sample.yaml  pyproject.toml  requirements.txt
examples/: README-examples.md
keymesh/: __init__.py  __main__.py  app.py  cli.py  config.py  constants.py  diff.py  hash_policy.py  indexer.py  logging_setup.py  manifest_store.py  status_http.py
keymesh/net/: __init__.py  client.py  conn_state.py  framing.py  mtls.py  server.py
keymesh/proto/: __init__.py  handshake.py  sync_index.py
keymesh/transfer/: __init__.py  audit.py  chunker.py  engine.py  protocol.py  router.py  session.py
keymesh/utils/: ignore.py  pathing.py
scripts/: gen-certs.ps1  gen-certs.sh  post-init-note.txt
